--- a/src/components/ParallaxText/ParallaxText.module.scss
+++ b/src/components/ParallaxText/ParallaxText.module.scss
@@ -9,6 +9,8 @@
   white-space: nowrap;
   display: flex;
   flex-wrap: nowrap;
+  width: 100%;
+  max-width: 100%;
 
   span {
     display: block;
